# torcha-verse

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  nightly.yml
agents/: __init__.py  base_agent.py  react_agent.py  tool_call_agent.py
agents/flows/: __init__.py  debate.py  hierarchical.py  sequential.py
assets/: __init__.py  base.py  cold_storage.py  model_asset.py  store.py  types.py
assets/model_asset/: __init__.py  _character.py  _depth.py  _model.py  _outfit.py  _scene.py
assets/store/: __init__.py  _cold.py  _db.py  _hot.py  _protocol.py  _schema.py  _sql.py  _store.py  _warm.py
canvas/: __init__.py  autodirector.py  canvas.py  models.py  registry.py  sharing.py  versioning.py
config/: config_snapshot.json  hardcoded_whitelist.yaml  hardcoding_critical_inventory.yaml  inference_config.yaml  model_config.yaml  prompt_templates.yaml  training_config.yaml
config/_defaults/: system.yaml
consistency/: __init__.py  character.py  outfit.py  pipeline.py  profile.py  scene.py  score.py
core/: __init__.py  checkpoint_loader.py  diffusion_scheduler.py  inference_scheduler.py  kv_cache_manager.py  kv_cache_v2.py  memory_manager.py  memory_pool.py  model_registry.py  module_bus.py  offload.py  runtime_scheduler.py  sampler.py  tokenizer_hub.py  tool_registry.py  vocoder_manager.py
core/export/: onnx.py
core/quantization/: gguf_loader.py
core/schedulers/: __init__.py  _base.py  dpm_solver.py  dpmpp_2m.py  euler.py  euler_ancestral.py  flow_match_euler.py  samplers.py  schedules.py
docs/: DEFERRED_TASKS.md  ROADMAP.md  V0.8_UPGRADE_PLAN.md  architecture.md  config_access.md  docker.md  examples_catalog.md  hardcoding_convention.md  local_transformers.md  model_loading.md  open_items.md  operations.md  placeholder_registry.md
docs/benchmarks/: sampler_compare.md
docs/plans/: architecture-redesign-v0.3.0.html  improvement-plan-v0.2.0.html  v0.3.1-refinement-enhancement-plan.html
engines/: agent_engine.py  audio_engine.py  image_engine.py  multimodal_engine.py  rag_engine.py  text_engine.py  video_engine.py
evaluation/: __init__.py  benchmark_runner.py  fid.py  image_eval.py  leaderboard.py  metrics.py  prompt_recall.py  runner.py  text_eval.py
examples/: README.md  agent_demo.py  audio_tts.py  basic_text_gen.py  consistency_character.py  dh_lipsync.py  image_gen.py  local_transformers_demo.py  model_download.py  rag_demo.py  real_text_chat.py  v05_feature_demo.py  video_gen.py
experiments/: README.md  __init__.py  framework.py
infrastructure/: __init__.py  agent.py  audit_log.py  cache_store.py  checkpoint_manager.py  config_center.py  config_manager.py  defaults.py  device_manager.py  error_handler.py  error_helper.py  logger.py  metrics.py  placeholder_registry.py  prometheus_bridge.py  rag.py  rate_limiter.py  resource_budget.py  scheduler.py  source_fetcher.py  tenant.py  vector_store.py
infrastructure/agent/: __init__.py  _bus.py  _parse.py  _registry.py  _types.py
infrastructure/checkpoint_manager/: __init__.py  _load.py  _manager.py  _protocols.py  _prune.py  _safetensors.py  _serialize.py  _state.py
infrastructure/config_center/: __init__.py  _budget.py  _center.py  _io.py  _jsonable.py  _paths.py  _schema.py
infrastructure/resource_budget/: __init__.py  _feasibility.py  _lock.py  _tracker.py  _types.py
models/: __init__.py  base.py  lora.py
models/audio/: __init__.py  audio_codec.py  hifi_gan.py  music.py  tts_transformer.py
models/components/: __init__.py  lora.py  rmsnorm.py  rope.py  swiglu.py
models/image/: __init__.py  clip_encoder.py  dit.py  restoration.py  unet.py  vae.py
models/interfaces/: __init__.py  llm_provider.py  media_providers.py
models/multimodal/: __init__.py  omni_model.py  vision_language.py
models/providers/: __init__.py  _text_sanitiser.py  factory.py  local_audio.py  local_image.py  local_multimodal.py  (+4 more)
nodes/: __init__.py  _helpers.py  _subtitle_codec.py  agent.py  audio.py  base.py  consistency.py  digital_human.py  export.py  image.py  rag.py  subtitle.py  text.py  type_system.py  video.py
papers/: __init__.py  adapter.py  attention_is_all_you_need.yaml  cli.py  hunyuan_dit.yaml  liveportrait.yaml  musetalk.yaml  rag.yaml  registry.py  sadtalker.yaml  spec.py  stable_diffusion_3.yaml
performance/: __init__.py  benchmark.py  optimizer.py  quantization.py
pipeline/: __init__.py  cache.py  composer.py  dag.py  prompt_studio.py  templates.py  validators.py
plugins/: __init__.py  cli.py  manager.py  manifest.py  sdk.py  spec.py
rag/: __init__.py
scripts/: check_ci_gates.py  check_degrade_logging.py  check_hardcoding.py  check_hardcoding_rules.py  check_placeholders.py  ci_config.py
security/: __init__.py  audit.py  input_sanitizer.py  output_filter.py  sandbox.py
serving/: __init__.py  api_server.py  app.py  cli.py  metrics.py  models.py  service.py  web_ui.py
tests/: conftest.py  test_agents.py  test_core.py  test_device_manager_placeholders.py  test_e2e_audio.py  test_e2e_consistency.py  test_e2e_digital_human.py  test_e2e_export.py  test_e2e_image.py  test_e2e_subtitle.py  test_e2e_text.py  test_e2e_video.py  test_engines.py  test_error_helper.py  test_evaluation.py  test_examples_import.py  test_from_pretrained_smoke.py  test_hardcoding_rules.py  test_hardcoding_severity.py  test_infrastructure.py  test_integration_combo.py  test_local_providers.py  test_local_transformers.py  test_model_source_integrity.py  test_model_source_mirror.py  test_models.py  test_models_source.py  test_multimodal_providers.py  test_papers.py  test_performance_benchmark.py  test_performance_optimizer.py  test_performance_quantization.py  test_pipeline_run.py  test_placeholder_registry.py  test_plugins.py  test_r16_perf.py  test_r17_cli.py  test_r18_lazy.py  test_r5_canvas_merge.py  test_r5_consistency_e2e.py  (+61 more)
tools/: __init__.py  calculator.py  file_ops.py  python_executor.py  web_search.py
training/: __init__.py  dataset.py  rlhf_trainer.py  sft_trainer.py  synthetic_data.py
(+130 files in other folders)
