[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torcha-verse"
version = "0.3.0"
description = "Pure PyTorch all-modal generative AI framework"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "TorchaVerse Team" }]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "click>=8.1.0",
    "safetensors>=0.4.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "gradio>=4.0.0",
    "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
quantization = ["bitsandbytes>=0.41.0"]
clip = ["open_clip_torch>=2.24.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.1.0"]

[project.scripts]
torcha = "serving.cli:main"

[project.urls]
Homepage = "https://github.com/torcha-verse/torcha-verse"

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU (deselect with '-m \"not gpu\"')",
    "eval: marks evaluation tests (FID / CLIP-score / PSNR / SSIM / LPIPS)",
    "model_source: marks model-source tests (license check, cache, fetch)",
    "model_provider: marks local-torch model provider tests (tiny Transformer, training, L4 wiring)",
    "placeholder_registry: marks placeholder-registry scanner / parser tests",
    "hardcoding_severity: marks hardcoding-scanner severity tests (D1)",
    "hardcoding_rules: marks hardcoding-scanner pluggable-rule tests (D1 stage three)",
    "examples: marks examples/*.py smoke tests (import + main() presence)",
    "error_helper: marks infrastructure/error_helper.py tests (D3 stage three)",
]

# ---------------------------------------------------------------------------
# Coverage configuration
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = [
    "agents",
    "assets",
    "canvas",
    "config",
    "consistency",
    "core",
    "infrastructure",
    "models",
    "nodes",
    "pipeline",
    "plugins",
    "rag",
    "security",
    "serving",
    "tools",
    "training",
]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
# Exclude lines that should not be counted as executable
# (a) pragma-style "no cover" hints: `# pragma: no cover`
# (b) abstract methods that are only declared but never run
# (c) `raise NotImplementedError` stubs in protocol classes
# (d) `if __name__ == "__main__":` script entry points
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
# Fold multi-line `if` / `try` guards so the cover counter
# does not count branches introduced only by line wrapping.
exclude_also = [
    "def __repr__",
    "\\.\\.\\.",
]
ignore_errors = false
# Sort the missing-line list by file/line for easier review.
sort = "Cover"

# ---------------------------------------------------------------------------
# D1 stage three (v0.4.x): pluggable hardcoding scanner + CI gates.
# ---------------------------------------------------------------------------
# Settings read by ``scripts/check_hardcoding.py --ci`` and
# ``scripts/check_ci_gates.py`` (D1 stage three).  CI pipelines
# invoke the latter, which runs every gate whose ``enabled`` is
# true (or whose default-enabled is true and no override is
# set).  Adding a new gate is a 4-line change in
# ``scripts/check_ci_gates.py`` plus a section here.

[tool.torcha-verse.hardcoding]
# Path scanned by the hardcoding CI gate.
path = "."
# Whitelist applied before the gate reports violations.
whitelist = "config/hardcoded_whitelist.yaml"
# Severity that makes the gate fail.  ``critical`` is the
# safe default: only "must be fixed" violations fail CI.
# Lower severities stay in the report as ``info`` /
# ``warn`` without failing the build.
ci_fail_on = "critical"
# Master switch.  ``false`` is useful for emergency bypass
# (e.g. local hot-fix before a real fix lands).
enabled = true

[tool.torcha-verse.ci-gates.hardcoding]
enabled = true

[tool.torcha-verse.ci-gates.placeholders]
enabled = true

[tool.torcha-verse.ci-gates.degrade_logging]
# D3 stage three: 默认 disabled, 等 38 处 silent-degrade 补完再 enabled = true
# 当前可用 `python scripts/check_degrade_logging.py` 单跑看进度
enabled = false

# ---------------------------------------------------------------------------
# Type checking (mypy)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "build/",
    "dist/",
]

# ---------------------------------------------------------------------------
# Linting (ruff)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # unused imports in tests (fixtures)

# ---------------------------------------------------------------------------
# Formatting (black)
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py310"]
line-length = 100
extend-exclude = "/(build|dist)/"
